[package]
name = "aether-protocol"
version = "0.1.0"
edition = "2021"
authors = ["James Gober <code@jamesgober.dev>"]
description = "The official network protocol crate for AetherDB. Defines all request/response data structures for communicating with the high-performance CORD engine."
readme = "README.md"

# This crate is intended to be public to allow for client development.
publish = true

# Use a standard, permissive open-source license.
license = "MIT OR Apache-2.0"

repository = "https://github.com/AetherDB/aether-protocol" # Placeholder URL

keywords = [
    "aetherdb",
    "database",
    "protocol",
    "api",
    "cord",
]

categories = [
    "database",
    "network-programming",
]

[dependencies]
# For serializing and deserializing the request/response structs.
serde = { version = "1.0", features = ["derive"] }

# The binary format used for efficient network transport.
bincode = "1.3"

# For handling the flexible `Value` type in records.
serde_json = "1.0"