[package]
name = "aether-protocol"
version = "0.9.2"
edition = "2021"
authors = ["James Gober <code@jamesgober.dev>"]
description = "The official network protocol crate for AetherDB. Defines all request/response data structures for communicating with the high-performance CORD engine."
readme = "README.md"
publish = true
license = "Apache-2.0"
documentation = "https://docs.rs/aether-protocol"
repository = "https://github.com/AetherDB/aether-protocol"

keywords = ["aetherdb", "database", "protocol", "api", "cord"]
categories = ["database", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"